--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,30 +5,29 @@ name: Python package
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   build:
-
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Run Tests
-      run: |
-        bash -x ./runner_linux.sh test
-    - name: Archive robot test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: robot-test-report-python${{ matrix.python-version }}
-        path: result/log.html
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Run Tests
+        run: |
+          bash -x ./runner_linux.sh test
+      - name: Archive robot test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: robot-test-report-python${{ matrix.python-version }}
+          path: result/log.html
